--- a/코딩실습.html
+++ b/코딩실습.html
@@ -13,10 +13,28 @@
     <li><a href="Javascript.html" title="WEB1 - Javascript">Javascript</a></li>
   </ol>
 <h2>코딩실습</h2>
-<p><strong><a href="코딩실습.html" target="_blank" >코딩실습</a></strong><br><strong><u>가장 기초적인 부분부터 하나씩</u></strong> 여러가지 기능들을 체험해보자 만들어보자~<br>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+<p><strong><a href="코딩실습.html" target="_blank" >코딩실습</a></strong><br><strong><u>코딩, 웹, 인터넷, 컴퓨터<br>가장 기초적인 부분부터 하나씩</u></strong> 여러가지 기능들을 체험해보자 만들어보자~<br>
 <img src="coding.jpg" width="50%">
-<parenmt>
-    <child></child>
-</parenmt>
+
+<p><div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://web1-smgz0kutaw.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></p>
 </body>
 </html>
